--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,35 +1,70 @@
 version: 0.2
+run-as: root
 
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - echo $AWS_DEFAULT_REGION
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 979490057625.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_NAME="demo-nginx"       
-      - REPOSITORY_URI=979490057625.dkr.ecr.us-east-1.amazonaws.com/demo-nginx:latest
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
-phases:
-  pre_build:
-    commands:
-      - echo Logging in to Docker Hub...
-      - echo "$DOCKER_PASSWORD" | docker login -u "hamzakhan1o1" --password-stdin khaniham1
-      - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 979490057625.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_NAME="demo-nginx"
-      - REPOSITORY_URI=979490057625.dkr.ecr.us-east-1.amazonaws.com/demo-nginx:latest
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_NAME:latest .
+      - docker build -t hamzaci .
+
   post_build:
     commands:
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"golang-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - docker tag hamzaci:latest 979490057625.dkr.ecr.us-east-1.amazonaws.com/hamzaci:latest
+      - docker push 979490057625.dkr.ecr.us-east-1.amazonaws.com/hamzaci:latest
+      - echo "Creating imagedefinitions.json file..."
+      - |
+        echo '[
+          {
+            "name": "hamzaci",
+            "imageUri": "'$frontendimageuri'",
+            "containerPort": 80,
+            "hostPort": 80,
+            "essential": true
+          }
+        ]' > imagedefinitions.json
+      - |
+        echo '{
+          "family": "green",
+          "networkMode": "awsvpc",
+          "requiresCompatibilities": ["FARGATE"],
+          "memory": "512",
+          "cpu": "256",
+          "executionRoleArn": "'$executionrole'",
+          "containerDefinitions": [
+            {
+              "name": "frontend",
+              "image": "'$frontendimageuri'",
+              "portMappings": [
+                {
+                  "containerPort": 80,
+                  "hostPort": 80
+                }
+              ],
+              "memory" : 500,
+              "cpu" : 250
+            }
+          ]
+        }' > taskdef.json
+      - export TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://taskdef.json --query 'taskDefinition.taskDefinitionArn' --output text)
+      - echo "'$TASK_DEF_ARN'"
+      - |
+        echo 'version: 0.0
+        Resources:
+          - TargetService:
+              Type: AWS::ECS::Service
+              Properties:
+                TaskDefinition: "'$TASK_DEF_ARN'"
+                LoadBalancerInfo:
+                  ContainerName: "frontend"
+                  ContainerPort: 80' > appspec.yaml
 
 artifacts:
-  files: imagedefinitions.json
+  files:
+    - imagedefinitions.json
+    - appspec.yaml
+    - taskdef.json
